crates/alder-parse/src/expression/snapshots/alder_parse__expression__case__tests__case_multiple_branches.snap
---
source: crates/alder-parse/src/expression/case.rs
description: "Code:\n\ncase x of\n    0 -> \"zero\"\n    1 -> \"one\"\n    _ -> \"other\"\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 1,
        },
    },
    value: Case {
        scrutinee: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var {
                kind: LowVar,
                name: "x",
            },
        },
        arms: [
            CaseArm {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 6,
                        },
                    },
                    value: Int(
                        0,
                    ),
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 10,
                        },
                        end: Position {
                            line: 2,
                            column: 16,
                        },
                    },
                    value: Str(
                        "zero",
                    ),
                },
            },
            CaseArm {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 5,
                        },
                        end: Position {
                            line: 3,
                            column: 6,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 10,
                        },
                        end: Position {
                            line: 3,
                            column: 15,
                        },
                    },
                    value: Str(
                        "one",
                    ),
                },
            },
            CaseArm {
                pattern: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 5,
                        },
                        end: Position {
                            line: 4,
                            column: 6,
                        },
                    },
                    value: Anything,
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 10,
                        },
                        end: Position {
                            line: 4,
                            column: 17,
                        },
                    },
                    value: Str(
                        "other",
                    ),
                },
            },
        ],
    },
}
